namespace DarkHavoc
{
    public enum AnimationState
    {
        Ground,
        Air,
        Roll,
        LightAttack,
        HeavyAttack,
        Block,
        Parry,
        Crouch,
        ParryAttack,
        Death,
        LedgeGrab,
        WallSlide,
        SitUp,
        SitDown,
        Awake,
        None,
        RangedAttack,
        MeleeAttack
    }
}